remove v1 and oauth middleware
